# CMSIS-Zephyr

./: .gitignore  README.md  vcpkg-configuration.json  west.yml  zephyr.cbuild-pack.yml  zephyr.csolution.yml
.github/workflows/: Build_IFX_T2G_B_H.yaml  Build_NUCLEO-H563ZI.yaml  Run_IFX_T2G_B_H.yaml  Run_NUCLEO-H563ZI.yaml
Alif_E7_Zephyr/Blank_solution/: Blank_solution+AE722F80F55D5LS.cbuild-run.yml  Blank_solution.cbuild-idx.yml  Blank_solution.cbuild-pack.yml  Blank_solution.cbuild-set.yml  Blank_solution.csolution.yml  README.md
Alif_E7_Zephyr/Blank_solution/M55_HE/: .clangd  M55_HE.Debug+AE722F80F55D5LS.cbuild.yml  M55_HE.cproject.yml
Alif_E7_Zephyr/Blank_solution/M55_HE/RTE/Device/AE722F80F55D5LS_M55_HE/: regions_DevKit-E7.h
Alif_E7_Zephyr/Blank_solution/M55_HE/RTE/_Debug_AE722F80F55D5LS/: RTE_Components.h
Alif_E7_Zephyr/Blank_solution/M55_HP/: M55_HP.cproject.yml
Alif_E7_Zephyr/Blank_solution/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
Alif_E7_Zephyr/Blank_solution/tmp/1/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
Alif_E7_Zephyr/Blank_solution/tmp/M55_HE.Debug+AE722F80F55D5LS/: CMakeLists.txt
Alif_E7_Zephyr/Blank_solution/tmp/M55_HE.Debug+AE722F80F55D5LS/src/M55_HE.Debug+AE722F80F55D5LS-stamp/: M55_HE.Debug+AE722F80F55D5LS-configure-.cmake  M55_HE.Debug+AE722F80F55D5LS-database-.cmake  M55_HE.Debug+AE722F80F55D5LS-source_dirinfo.txt
Alif_E7_Zephyr/Blank_solution/tmp/M55_HE.Debug+AE722F80F55D5LS/tmp/: M55_HE.Debug+AE722F80F55D5LS-cfgcmd.txt  M55_HE.Debug+AE722F80F55D5LS-mkdirs.cmake
Alif_E7_Zephyr/ipm_arm_mhuv2/: README.md  ipm_arm_mhuv2.csolution.yml  vcpkg-configuration.json
Alif_E7_Zephyr/ipm_arm_mhuv2/M55_HE/: M55_HE.cproject.yml
Alif_E7_Zephyr/ipm_arm_mhuv2/M55_HP/: M55_HP.cproject.yml
Alif_E7_Zephyr/ipm_arm_mhuv2_sysbuild/: README.md  ipm_arm_mhuv2.csolution.yml  ipm_arm_mhuv2_sysbuild.csolution.yml  vcpkg-configuration.json
Alif_E7_Zephyr/ipm_arm_mhuv2_sysbuild/M55_HE/: M55_HE.cproject.yml  main.c
Alif_E7_Zephyr/ipm_arm_mhuv2_sysbuild/M55_HP/: M55_HP.cproject.yml
Alif_E7_Zephyr/ipm_arm_mhuv2_sysbuild/rtss_he/: CMakeLists.txt  README.rst  sample.yaml  sysbuild.cmake
Alif_E7_Zephyr/ipm_arm_mhuv2_sysbuild/rtss_he/src/: for_apss_mhu0.c  for_apss_mhu1.c  for_rtss_hp_mhu0.c  for_rtss_hp_mhu1.c  se_service_test.c
Alif_E7_Zephyr/ipm_arm_mhuv2_sysbuild/rtss_hp/: CMakeLists.txt  README.rst  sample.yaml
Alif_E7_Zephyr/ipm_arm_mhuv2_sysbuild/rtss_hp/src/: for_apss_mhu0.c  for_apss_mhu1.c  for_rtss_he_mhu0.c  for_rtss_he_mhu1.c  se_service_test.c
Examples/B-U585I-IOT02A/Blinky/: blinky.cbuild-pack.yml  blinky.csolution.yml
Examples/B-U585I-IOT02A/Threads/: threads.cbuild-pack.yml  threads.csolution.yml
STM32H7B3I-DK_Zephyr/Blank_solution/: Blank_solution.cproject.yml  Blank_solution.csolution.yml  README.md  vcpkg-configuration.json
